Quick: Save Robotics Camp from CMS, drop extra <p>

--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -6,8 +6,7 @@
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">Robotics</span>
-		</div>
+			<span class="camp-name">Robotics</span></div>
 		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
 			<p>
 				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
@@ -19,9 +18,9 @@
 	</header>
 	<div class="row">
 		<!-- RT-20977: Pending `robotics-5136.jpeg` -->
-		<div class="col-md-12" hidden>
+		<div class="col-md-12" hidden="">
 			<p class="centered">
-				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/2063698/robotics-3.jpeg/" /></p></p>
+				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/2063698/robotics-3.jpeg/" /></p>
 		</div>
 		<!--
 		<div class="col-md-6">
@@ -31,8 +30,7 @@
 		<div class="col-md-6">
 			<p class="centered">
 				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/2063698/robotics-3.jpeg/" /></p>
-		</div>-->
-	</div>
+		</div>--></div>
 	<div class="row">
 		<div class="col-md-6">
 			<p>
@@ -55,23 +53,18 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span>
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_4UiwnpRGmA1obQ2" target="_blank">Click to Apply</a>
-			</h2>
+				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_4UiwnpRGmA1obQ2" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
-				Registration closes on _Month_ _DATE_, _YEAR_.</p>-->
-			<!-- OPEN: Close on Date. Notify by Date -->
+				Registration closes on _Month_ _DATE_, _YEAR_.</p>--><!-- OPEN: Close on Date. Notify by Date -->
 			<p class="data-banner__content  small">
 				Application closes April 25, 2022. Students to be notified of acceptance on May 6, 2022.</p>
 			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			-->
-			<!-- CLOSED: Simple --><!--
+			--><!-- CLOSED: Simple --><!--
 			<p class="data-banner__content">
-				Applications closed.</p>-->
-		</div>
+				Applications closed.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -170,8 +163,7 @@
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
-					</ul>-->
-					<!--<p>
+					</ul>--><!--<p>
 						<em>Compliance Forms:</em></p>
 					<ul class="info-list">
 						<li>
@@ -194,8 +186,7 @@
 							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>-->
-				</div>
+					</ul>--></div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
@@ -206,8 +197,7 @@
 							<a href="/documents/1084364/1736606/Comm+Plan+Robotics.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+Robotics+-+SPANISH.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - SPANISH">Español</a></li>
-					</ul>-->
-				</div>
+					</ul>--></div>
 			</div>
 		</div>
 	</div>
