RT-20677: More Items to New Presentations Page

--- a/web-content/root/education/EPIC/WeTeach_CS/presentations.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/presentations.html
@@ -268,5 +268,42 @@
             <td class="weteachcs-table__link">
                 <a href="https://docs.google.com/presentation/d/1xaAlh9kgspNlXTPgrl6VMsex-cQJkaOTtmfCffPnWvM/edit#slide=id.p" target="_blank"  title="Hello World!  I Can Code!">View</a></td>
         </tr>
+        <tr>
+            <td class="weteachcs-table__date">
+                October 2021</td>
+            <td class="weteachcs-table__title">
+                College, Career, and Military Readiness: Counselor &amp; Administrator Session</td>
+            <td class="weteachcs-table__place">
+                2021 Pathways to Texas CCMR Summit (White Settlement, TX)</td>
+            <td class="weteachcs-table__cite">
+                <span>Ruth Kyle</span>, <span> Amy Carrell</span></td>
+            <td class="weteachcs-table__link">
+                <a href="bit.ly/CCMR-CS  
+" target="_blank"  title="College, Career, and Military Readiness: Counselor &amp; Administrator Session">View</a></td>
+        </tr>
+        <tr>
+            <td class="weteachcs-table__date">
+                November 2021</td>
+            <td class="weteachcs-table__title">
+                CS Certification through Micro-credentials and Exam Prep</td>
+            <td class="weteachcs-table__place">
+                CSEdCon (Los Angeles, CA)</td>
+            <td class="weteachcs-table__cite">
+                <span>Amy Carrell</span></td>
+            <td class="weteachcs-table__link">
+                <a href="https://docs.google.com/presentation/d/1G-m0_orfh7AbmH9LXQIZ_rzIddVr3CjErydSnlMrNF0/edit#slide=id.gf8bdf88f1d_2_31" target="_blank"  title="CS Certification through Micro-credentials and Exam Prep">View</a></td>
+        </tr>
+        <tr>
+            <td class="weteachcs-table__date">
+                November 2021</td>
+            <td class="weteachcs-table__title">
+                CS Teacher Certification Prep for the Praxis with WeTeach_CS resources</td>
+            <td class="weteachcs-table__place">
+                Code.org Virtual Regional Partner Summit (Virtual)</td>
+            <td class="weteachcs-table__cite">
+                <span>Amy Carrell</span></td>
+            <td class="weteachcs-table__link">
+                <a href="https://docs.google.com/presentation/d/1yqPCMGwW5VfDqs380QiSKFfk8SLILlUp8pHRwNVwOlw/edit?usp=sharing" target="_blank"  title="CS Teacher Certification Prep for the Praxis with WeTeach_CS resources">View</a></td>
+        </tr>
     </tbody>
 </table>
