RT-20677: Missing Http on a link

--- a/web-content/root/education/EPIC/WeTeach_CS/presentations.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/presentations.html
@@ -278,7 +278,7 @@
             <td class="weteachcs-table__cite">
                 <span>Ruth Kyle</span>, <span> Amy Carrell</span></td>
             <td class="weteachcs-table__link">
-                <a href="bit.ly/CCMR-CS  
+                <a href="http://bit.ly/CCMR-CS  
 " target="_blank"  title="College, Career, and Military Readiness: Counselor &amp; Administrator Session">View</a></td>
         </tr>
         <tr>
