RT-20677: Swap <p> On EPIC Presentation Pages

--- a/web-content/root/education/EPIC/Research/presentations.html
+++ b/web-content/root/education/EPIC/Research/presentations.html
@@ -1,7 +1,5 @@
 <h3>
     Presentations</h3>
-<p>
-    More presentations can be found on the <a href="https://www.slideshare.net/weteachcs" target="_blank">WeTeach_CS Slideshare</a> page.</p>
 <table class="weteachcs-table">
     <thead>
         <tr>
@@ -112,7 +110,7 @@
             <td class="weteachcs-table__cite">
                 <span>Taylor</span>, <span> V</span>, <span> Ladner</span>, <span> R.</span>, <span> Gates</span>, <span> A.</span>, <span> Robinson</span>, <span> R.</span>, <span> Howard</span>, <span> A.</span>, <span> Fletcher</span>, <span> C.</span>, <span> Gilbert</span>, <span> J.</span>, <span> Fernandez</span>, <span> J.</span>, <span> & Payton</span>, <span> J.</span></td>
             <td class="weteachcs-table__link">
-                </td>
+                <a href="http://" target="_blank"  title="Increasing Diversity in Computing: Sharing Good Practices">View</a></td>
         </tr>
         <tr>
             <td class="weteachcs-table__date">
@@ -136,7 +134,7 @@
             <td class="weteachcs-table__cite">
                 <span>Dunton</span>, <span> S.</span>, <span> Fletcher</span>, <span> C.</span>, <span> Goodhue</span>, <span> J.</span>, <span> Franklin</span>, <span> C.</span>, <span> Forbes</span>, <span> J.</span></td>
             <td class="weteachcs-table__link">
-                </td>
+                <a href="http://" target="_blank"  title="Lessons from the Field, Resources to Advance Broadening Participation in Computing Efforts">View</a></td>
         </tr>
         <tr>
             <td class="weteachcs-table__date">
@@ -184,7 +182,7 @@
             <td class="weteachcs-table__cite">
                 <span>Taylor</span>, <span> V.</span>, <span> Ladner</span>, <span> R.</span>, <span> Anderson-Herzog</span>, <span> M.</span>, <span> Gilbert</span>, <span> J.</span>, <span> Fletcher</span>, <span> C.</span>, <span> Dubow</span>, <span> W.</span>, <span> Tirres</span>, <span> A.</span>, <span> Payton</span>, <span> J.</span>, <span> Robinson</span>, <span> R.</span></td>
             <td class="weteachcs-table__link">
-                </td>
+                <a href="http://" target="_blank"  title="Increasing Diversity in Computing: Sharing of Good Practices.">View</a></td>
         </tr>
     </tbody>
 </table>
