--- a/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
@@ -2,9 +2,9 @@
 <div class="container  camp-faq-container">
 	<div class="row">
 		<div class="col-md-12">
-            <!-- (ON-SITE) COMMON -->
-			<div id="onsite-basics-faq" aria-multiselectable="table" class="panel-group" role="tablist">
-                <strong>On-Site</strong>
+			<!-- (ON-SITE) COMMON -->
+			<div aria-multiselectable="table" class="panel-group" id="onsite-basics-faq" role="tablist">
+				<strong>On-Site</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="location" role="tab">
 						<h4 class="panel-title">
@@ -25,7 +25,7 @@
 							<b>A:</b> During the summer program, participants are rising sophomores and juniors in high school.</div>
 					</div>
 				</div>
-                <div class="panel panel-default">
+				<div class="panel panel-default">
 					<div class="panel-heading" id="housing" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="housing-answer" aria-expanded="true" class="collapsed" data-parent="#onsite-basics-faq" data-toggle="collapse" href="#housing-answer" role="button"> <b>Q</b>: Where will the students be staying during the course of the program? </a></h4>
@@ -35,7 +35,7 @@
 							<b>A:</b> Students will be housed in a campus residential hall (campus dorm). Participants are responsible for their travel to and from the UT campus at the start and conclusion of program.</div>
 					</div>
 				</div>
-                <div class="panel panel-default">
+				<div class="panel panel-default">
 					<div class="panel-heading" id="clothes" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="washing-clothes" aria-expanded="true" class="collapsed" data-parent="#onsite-basics-faq" data-toggle="collapse" href="#washing-clothes" role="button"> <b>Q</b>: Will students be able to wash clothes? </a></h4>
@@ -52,20 +52,19 @@
 					</div>
 					<div aria-labelledby="packed-clothes" class="panel-collapse collapse" id="packing" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Participants will be able to wash clothes in their residential halls therefore participants should bring one week’s worth of clothes. Participants are also encouraged to bring comfortable shoes and "nice" dressy clothes for their dining etiquette dinner.</div>
+							<b>A:</b> Participants will be able to wash clothes in their residential halls therefore participants should bring one week's worth of clothes. Participants are also encouraged to bring comfortable shoes and "nice" dressy clothes for their dining etiquette dinner.</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- RT-21012: This markup matched "Code@TACC - FAQ (- Common)" which was migrated into "Code@TACC - FAQ - On-Site" -->
-<!-- NOTE: This markup expects "Code@TACC - Styles" -->
+<!-- RT-21012: This markup matched "Code@TACC - FAQ (- Common)" which was migrated into "Code@TACC - FAQ - On-Site" --><!-- NOTE: This markup expects "Code@TACC - Styles" -->
 <div class="container  camp-faq-container">
 	<div class="row">
 		<div class="col-md-12">
 			<!-- (SHARED) COMMON -->
-			<div id="shared-common-faq" aria-multiselectable="table" class="panel-group" role="tablist">
+			<div aria-multiselectable="table" class="panel-group" id="shared-common-faq" role="tablist">
 				<strong>Common</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="involvement" role="tab">
@@ -109,7 +108,7 @@
 				</div>
 			</div>
 			<!-- (SHARED) PARTICIPATION -->
-			<div id="shared-participation-faq" aria-multiselectable="table" class="panel-group" role="tablist">
+			<div aria-multiselectable="table" class="panel-group" id="shared-participation-faq" role="tablist">
 				<strong>Participation</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="wifi" role="tab">
@@ -145,14 +144,13 @@
 		</div>
 	</div>
 </div>
-<!-- RT-21012: This markup was migrated out of "Code@TACC - FAQ (- Common)" -->
-<!-- NOTE: This markup expects "Code@TACC - Styles" -->
+<!-- RT-21012: This markup was migrated out of "Code@TACC - FAQ (- Common)" --><!-- NOTE: This markup expects "Code@TACC - Styles" -->
 <div class="container  camp-faq-container">
 	<div class="row">
 		<div class="col-md-12">
-            <!-- (ON-SITE) GENERAL -->
-			<div id="onsite-general-faq" aria-multiselectable="table" class="panel-group" role="tablist">
-                <strong>General</strong>
+			<!-- (ON-SITE) GENERAL -->
+			<div aria-multiselectable="table" class="panel-group" id="onsite-general-faq" role="tablist">
+				<strong>General</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="laptop" role="tab">
 						<h4 class="panel-title">
@@ -160,7 +158,7 @@
 					</div>
 					<div aria-labelledby="laptop" class="panel-collapse collapse" id="laptop-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Participants will not need to bring laptops from home. Laptops will be loaned to students during the program. </div>
+							<b>A:</b> Participants will not need to bring laptops from home. Laptops will be loaned to students during the program.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
@@ -193,11 +191,11 @@
 							<b>A:</b> Whitis court residential hall requires card access to enter each building. Also, exits are alarmed and connected to University PD. Also, at least two counselors are assigned to sleep in each residential building.</div>
 					</div>
 				</div>
-            </div>
-            <!-- (ON-SITE) Health -->
-            <div id="onsite-health-faq" aria-multiselectable="table" class="panel-group" role="tablist">
-                <strong>Health</strong>
-                <div class="panel panel-default">
+			</div>
+			<!-- (ON-SITE) Health -->
+			<div aria-multiselectable="table" class="panel-group" id="onsite-health-faq" role="tablist">
+				<strong>Health</strong>
+				<div class="panel panel-default">
 					<div class="panel-heading" id="allergies" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="allergies-answer" aria-expanded="true" class="collapsed" data-parent="#onsite-health-faq" data-toggle="collapse" href="#allergies-answer" role="button"> <b>Q</b>: What if my child has food allergies or special dietary needs?</a></h4>
@@ -217,10 +215,10 @@
 							<b>A:</b> We have an on campus health service for minor treatment (512-471-4955), Monday through Friday 8am – 5pm. For emergency treatment, students will be transported to St. David's North Austin Medical Center (12221 N. Mopac).</div>
 					</div>
 				</div>
-            </div>
-            <!-- (ON-SITE) LEAVE & VISITORS -->
-			<div id="onsite-leavevisit-faq" aria-multiselectable="table" class="panel-group" role="tablist">
-                <strong>Leaving Campus / Having Visitors</strong>
+			</div>
+			<!-- (ON-SITE) LEAVE & VISITORS -->
+			<div aria-multiselectable="table" class="panel-group" id="onsite-leavevisit-faq" role="tablist">
+				<strong>Leaving Campus / Having Visitors</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="early-dismissal" role="tab">
 						<h4 class="panel-title">
