RT-21012: Change text of a STEM Camp FAQ answer

--- a/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
@@ -188,7 +188,7 @@
 					</div>
 					<div aria-labelledby="safety-precautions" class="panel-collapse collapse" id="safety" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Whitis court residential hall requires card access to enter each building. Also, exits are alarmed and connected to University PD. Also, at least two counselors are assigned to sleep in each residential building.</div>
+							<b>A:</b> University housing requires card access to enter each building. Also, exits are alarmed and connected to University PD. Also, at least two counselors are assigned to sleep in each residential building.</div>
 					</div>
 				</div>
 			</div>
