--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -209,15 +209,25 @@
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
 			<div aria-multiselectable="table" class="panel-group" id="robotics-camp-faq" role="tablist">
-				<strong>Dates</strong>
+				<strong>Specific to This Camp</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the camp dates? </a></h4>
+							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the camp dates?</a></h4>
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
 							<b>A:</b> Sunday, June 26, 2022 through Saturday, July 2, 2022.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="ages" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the Code@TACC participants?</a></h4>
+					</div>
+					<div aria-labelledby="ages" class="panel-collapse collapse" id="ages-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> During the summer program, participants are rising sophomores and juniors in high school.</div>
 					</div>
 				</div>
 			</div>
