RT-21012: STEM Camp FAQ: Updates: Involve, Laptop

--- a/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_faq--on-site.html
@@ -63,7 +63,7 @@
 					</div>
 					<div aria-labelledby="involvement" class="panel-collapse collapse" id="involvement-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Parents are encouraged to attend final presentations, virtually, on the last day of the program.</div>
+							<b>A:</b> Parents are encouraged to attend final presentations, on the last day of the program.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
@@ -117,7 +117,7 @@
 					</div>
 					<div aria-labelledby="computer" class="panel-collapse collapse" id="computer-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Participants will be provided the necessary electronic and sensor components to complete the program. Additionally, participants can use a windows or mac computer. If participants do not have the necessary equipment such as laptops, they can be loaned out from TACC.</div>
+							<b>A:</b> Participants will be provided the necessary electronic and sensor components to complete the program.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
