Quick: Training & Events: Fix Data & Match Live

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -12,7 +12,8 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://learn.tacc.utexas.edu/course/view.php?id=114" target="_blank">Introduction to Portable Extensible Toolkit for Scientific Computing (PETSc)<br /><small>(hybrid course - you may participate in person or online)</small></a><br />
-			February 4th – 9th, 2022</p>
+			February 4th, 2022<span>&nbsp; |&nbsp;
+			9:00am – 4:00pm</span></p>
 	</div>
 </div>
 <div class="row">
@@ -21,7 +22,8 @@
 	<div class="col-xs-9">
 		<p>
 			<a href="https://learn.tacc.utexas.edu/course/view.php?id=113" target="_blank">Containers at TACC<br /><small>(hybrid course - you may participate in person or online)</small></a><br />
-			February 4th – 9th, 2022</p>
+			February 9th, 2022<span>&nbsp; |&nbsp;
+			9:00am – 4:00pm</span></p>
 	</div>
 </div>
 <div class="row">
