RT-21101: New Homepage Event

--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -28,6 +28,16 @@
 </div>
 <div class="row">
 	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=115" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/frontera-all-logos.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=115" target="_blank">High Performance Computing on Frontera/Webinar</a><br />
+			February 17th – 24th, March 3rd<span>&nbsp; |&nbsp;
+			9:00am – 3:30pm</span></p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
 		<a href="https://frontera-portal.tacc.utexas.edu/fellowship/application/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/nsf-frontera.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
