Quick: Save Jobs from CMS (whitespace diff)

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -38,8 +38,8 @@
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
 				<div class="panel-body">
-					<p>This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
-
+					<p>
+						This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
 					<p>
 						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
@@ -78,14 +78,14 @@
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-systems-admin" role="tabpanel">
 				<div class="panel-body">
-					<p>The position will evaluate new architectures, systems, and other system tools to determine the best techniques for providing services to staff and users. Individual will serve as TACC's subject matter expert on configuration change management, security tools, and networking.</p>
-
+					<p>
+						The position will evaluate new architectures, systems, and other system tools to determine the best techniques for providing services to staff and users. Individual will serve as TACC's subject matter expert on configuration change management, security tools, and networking.</p>
 					<p>
 						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Systems-Administrator_R_00017645" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
 			</div>
 		</div>
-	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
+		<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
@@ -99,7 +99,7 @@
 			</div>
 		</div>
 	</div>--></div>
-<!-- FAQ: Internship listing currently hidden --><!--
+	<!-- FAQ: Internship listing currently hidden --><!--
 <h4 style="margin-top:30px;">
 	Internships</h4>
 <div aria-multiselectable="table" class="panel-group" id="internships" role="tablist">
@@ -122,15 +122,16 @@
 	--><!--
 </div>
 -->
-<p>
-	&nbsp;</p>
-<h4>
-	Application Information</h4>
-<p style="font-size:small;">
-	All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
-<!--
+	<p>
+		&nbsp;</p>
+	<h4>
+		Application Information</h4>
+	<p style="font-size:small;">
+		All applicants must formally apply for a specific position through <a href="http://www.utexas.edu/jobs" target="_blank">UT Austin Jobs</a>. For complete job description(s), click on a listing above, and follow instructions to apply for the specific job of interest by using your online resume. For additional information about positions, please contact Sophia Price at <a href="mailto:jobs@tacc.utexas.edu">jobs@tacc.utexas.edu</a></p>
+	<!--
 	<p style="font-size:small;">
 The positions listed above include funded positions and positions for which funding is expected. <em>Funded positions</em> include a Job Number on position listing, and can only be applied for through the UT Austin Human Resources system (linked above). Instructions for applying are available on the UT Austin Jobs site. <em>Expected funding positions</em> do not have a Job Number indicated for the position. Inquiries should be directed to the contact listed on the position details.</p>
 -->
-<p style="font-size:small;">
-	<em>The University of Texas at Austin is an Equal Opportunity/Affirmative Action Employer and actively seeks women and minority applicants for all positions. Working conditions include exposure to standard office conditions, exposure to electrical and mechanical hazards, repetitive use of a keyboard at a workstation, use of manual dexterity, and lifting and moving. All positions are considered security sensitive and will involve a criminal background check and conviction verification conducted on applicant selected. The retirement plan for UT positions is Teacher Retirement System of Texas (TRS), subject to the position being at least 20 hours per week and at least 135 days in length.</em></p>
+	<p style="font-size:small;">
+		<em>The University of Texas at Austin is an Equal Opportunity/Affirmative Action Employer and actively seeks women and minority applicants for all positions. Working conditions include exposure to standard office conditions, exposure to electrical and mechanical hazards, repetitive use of a keyboard at a workstation, use of manual dexterity, and lifting and moving. All positions are considered security sensitive and will involve a criminal background check and conviction verification conducted on applicant selected. The retirement plan for UT positions is Teacher Retirement System of Texas (TRS), subject to the position being at least 20 hours per week and at least 135 days in length.</em></p>
+</div>
