RT-20861: Add job

--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -38,8 +38,7 @@
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
 				<div class="panel-body">
-					<p>
-						This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
+					<p>This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
 					<p>
 						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
@@ -52,8 +51,7 @@
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-developer" role="tabpanel">
 				<div class="panel-body">
-					<p>
-						This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
+					<p>This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
 					<p>
 						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00013541" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
@@ -66,6 +64,7 @@
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="project-and-stakeholder-relationship-manager" role="tabpanel">
 				<div class="panel-body">
+					
 					<p>
 						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Project-and-Stakeholder-Relationship-Manager_R_00016731" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
@@ -78,10 +77,22 @@
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-systems-admin" role="tabpanel">
 				<div class="panel-body">
-					<p>
-						The position will evaluate new architectures, systems, and other system tools to determine the best techniques for providing services to staff and users. Individual will serve as TACC's subject matter expert on configuration change management, security tools, and networking.</p>
+					<p>The position will evaluate new architectures, systems, and other system tools to determine the best techniques for providing services to staff and users. Individual will serve as TACC's subject matter expert on configuration change management, security tools, and networking.</p>
 					<p>
 						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Systems-Administrator_R_00017645" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
+			</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
+					<a aria-controls="research-engineering-scientist-associate-iv" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#research-engineering-scientist-associate-iv" role="button">Research Engineering&#x2F;Scientist Associate IV</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="research-engineering-scientist-associate-iv" role="tabpanel">
+				<div class="panel-body">
+					<p>This position will contribute to research, development, and support activities involving big data analysis, statistical analysis, and machine learning technologies and the interfaces by which users can transparently harness these techniques and technologies for the Scalable Computational Intelligence (SCI) group at TACC.</p>
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Engineering-Scientist-Associate-IV_R_00016779" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
 			</div>
 		</div>
