Quick: Update EPIC WeTeach_CS cert page whitespace

--- a/web-content/root/education/EPIC/WeTeach_CS/certification.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/certification.html
@@ -166,13 +166,17 @@ Style guide: components.weteachcs.cta
 		Earn a $1000 Stipend!</h4>
 	<p>
 		WeTeach_CS manages the Certification Incentive Program (CIP) that provides a $1000 stipend for Texas teachers who pass the CS 8-12 Test and obtain TEA CS certification. Hopefully, the stipend will help motivate you in your studies, and it will be a nice reward for your hard work! Instructions for applying for the stipend including eligibility, deadlines, and requirements are located lower on this page. Applications for the incentive program are due before testing.</p>
-	<p><span class="weteachcs-cta">Apply for the $1,000 Stipend at:</span> <a href="https://utakeit.tacc.utexas.edu/cip/" target="_blank">https://utakeit.tacc.utexas.edu/cip/</a></p>
+	<p>
+		<span class="weteachcs-cta">Apply for the $1,000 Stipend at:</span> <a href="https://utakeit.tacc.utexas.edu/cip/" target="_blank">https://utakeit.tacc.utexas.edu/cip/</a></p>
 	<h5>
 		Application Steps</h5>
 	<ol>
-		<li>You will be required to <a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT EID Self-Service Tools">Create a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a> (if you do not have one), or Login with your UT EID.</li>
-		<li>You will be prompted to complete your profile in UTakeIt.</li>
-		<li>You will then be able to Start the Application.</li>
+		<li>
+			You will be required to <a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT EID Self-Service Tools">Create a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a> (if you do not have one), or Login with your UT EID.</li>
+		<li>
+			You will be prompted to complete your profile in UTakeIt.</li>
+		<li>
+			You will then be able to Start the Application.</li>
 	</ol>
 	<h4>
 		Learn About CS Certification</h4>
@@ -236,15 +240,12 @@ Style guide: components.weteachcs.cta
 	</ul>
 	<h5>
 		Currently Certified Teachers</h5>
-	<!-- Tableau Snippet: Start -->
-	<!-- SEE: https://help.tableau.com/current/pro/desktop/en-us/embed_list.htm -->
-	<!-- TACC: For responsiveness, added class ` embed-responsive-item` -->
-	<style>
-	.tableauPlaceholder.embed-responsive-item {
+	<!-- Tableau Snippet: Start --><!-- SEE: https://help.tableau.com/current/pro/desktop/en-us/embed_list.htm --><!-- TACC: For responsiveness, added class ` embed-responsive-item` -->
+	<style type="text/css">
+.tableauPlaceholder.embed-responsive-item {
 		/* To overwrite inline styles dynamically-added by Tableau */
 		position: absolute !important;
-	}
-	</style>
+	}	</style>
 	<!-- TACC: For responsiveness, added class ` embed-responsive-item` -->
 	<div
 	class="tableauPlaceholder embed-responsive"
@@ -299,8 +300,7 @@ Style guide: components.weteachcs.cta
 	var scriptElement = document.createElement("script");
 	scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
 	vizElement.parentNode.insertBefore(scriptElement, vizElement);
-	</script>
-	<!-- Tableau Snippet: End -->
+	</script><!-- Tableau Snippet: End -->
 	<h4>
 		Start Teaching!</h4>
 	<p>
@@ -334,9 +334,9 @@ Style guide: components.weteachcs.cta
 	<p>
 		Whether you are a beginning computer science teacher or an experienced veteran, WeTeach_CS for HS provides all the instruction, materials, and support you need to teach a first year computer science course using three programming platforms: Scratch, Jeroo, and Java.</p>
 	<h6>
-		<a href="https://utakeit.tacc.utexas.edu/weteach_apcsa/" target="_blank">WeTeach_AP&reg;CSA</a></h6>
+		<a href="https://utakeit.tacc.utexas.edu/weteach_apcsa/" target="_blank">WeTeach_AP®CSA</a></h6>
 	<p>
-		The WeTeach_AP&reg;CSA curriculum is aligned with new College Board CED (Course Exam Description) for Computer Science "A". Each module is structured around objectives that provide context and relevance for you and your students. Designed with teachers in mind, WeTeach_AP&reg;CSA offers professional support through an online help desk, virtual office hours with the course developers, and forums for peer to peer collaboration on the curriculum.</p>
+		The WeTeach_AP®CSA curriculum is aligned with new College Board CED (Course Exam Description) for Computer Science "A". Each module is structured around objectives that provide context and relevance for you and your students. Designed with teachers in mind, WeTeach_AP®CSA offers professional support through an online help desk, virtual office hours with the course developers, and forums for peer to peer collaboration on the curriculum.</p>
 	<h4>
 		Supported by:</h4>
 	<p>
