RT-21120: Add to EPIC WeTeach_CS cert page

--- a/web-content/root/education/EPIC/WeTeach_CS/certification.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/certification.html
@@ -319,6 +319,12 @@ Style guide: components.weteachcs.cta
 		<a href="https://utakeit.tacc.utexas.edu/foundations-cs-praxis/" target="_blank">Foundations of CS for Teachers: Praxis Prep</a></h6>
 	<p>
 		This course explores and guides you through all 196 required competencies stipulated by the Praxis 5652 topic list, using a Canvas-based online course. The Course includes videos, online interactives, web-based lessons, hundreds of practice exercises, module quizzes and a Final Exam similar to the actual Praxis test, all aligned to the Praxis 5652 Computer Science competencies.</p>
+	<h6><a href="https://utakeit.tacc.utexas.edu/weteach-cert-prep-practice-c/" target="_blank">WeTeach Cert Prep Practice - Computer Science</a></h6>
+	<p>
+		The WeTeach_CS Cert Prep Practice contains 24 quizzes that each contain ten questions on topics outlined in the Praxis 5652 or the TExES 241 test specifications + two exams, one for Praxis and one for TExES. Suggested if you need additional practice after taking our course, or a great option for those who wish to check their knowledge without taking the course.</p>
+	<h6><a href="https://utakeit.tacc.utexas.edu/WeTeach-TExES-Tech-Apps/" target="_blank">WeTeach TExES Tech Apps EC - 12 (242) Practice Packet</a></h6>
+	<p>
+		This practice packet contains 12 quizzes containing ten questions on each of the competencies outlined in the TExES 242 test specifications for EC through 12 Technology Applications. In addition to the quizzes, there is a practice exam. This exam will present a random selection of 12 questions one from each of the 12 quizzes.</p>
 	<h5>
 		In-Person</h5>
 	<p>
