RT-21212: Save epic stem top from CMS
(and remove seemingly outdated comment)

--- a/web-content/root/education/stem-programs--content-top.html
+++ b/web-content/root/education/stem-programs--content-top.html
@@ -25,7 +25,7 @@ video,
 			Program Spotlight</h3>
 		<!-- FAQ: Old Content --><!--<div class="embed-repsonsive embed-responsive-4by3"><iframe class="embed-responsive-item" src="https://player.vimeo.com/246024459/61332e7bf5"></iframe></div> --><!-- FAQ: Old Content --><!-- <a href="" target="_blank"><img alt="Screenshot TACC Robotics" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeTACCRobotics.png" style="width: 768px;" /></a>-->
 		<video controls="" height="432" poster="https://www.tacc.utexas.edu/documents/1084364/1158641/robotics-video.png" width="768">
-			<source codecs="avc1.42E01E, mp4a.40.2" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeatTACC.mp4" type="video/mp4"></source></video><!-- WARNING: CMS sometimes duplicates <source> markup on save. The top content is saved separately so the strange markup is easier to isolate -->
+			<source codecs="avc1.42E01E, mp4a.40.2" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeatTACC.mp4" type="video/mp4"></source></video>
 		<p>
 			Code@TACC Robotics provides an introduction to programming, robotics and electronics</p>
 	</div>
@@ -33,7 +33,7 @@ video,
 		<h3 style="clear: both">
 			<!-- The "clear: both" prevents text hang on ≥976px -->Tours</h3>
 		<p>
-			<button class="btn btn-warning btn-block btn-lg" disabled="disabled" href="/web/website/education/tours/schedule" style="text-align:center;">Request a Tour</button></p>
+			<a class="btn btn-warning btn-lg btn-block" href="/web/website/education/tours/" style="text-align:center;">Request a Tour</a></p>
 		<!--<p style="color:red;"><strong>Attention K-12 groups: We have reached capacity for tours for the period of June 1-August 7, 2016. We are welcoming tour requests for tours after August 7, 2016. Thank you.</strong></p>-->
 		<p>
 			In addition to summer programming, TACC provides educational tours throughout the year to increase awareness about the impact of science and technology; get students excited about STEM careers; and help students make the connection between STEM careers and their everyday lives.</p>
