RT-21212: Update epic stem covid notice

--- a/web-content/root/education/stem-programs--content-top.html
+++ b/web-content/root/education/stem-programs--content-top.html
@@ -19,7 +19,7 @@ video,
 	<div class="col-sm-9">
 		<div class="portlet-msg-info notice--covid-19">
 			<p>
-				Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</p>
+				All TACC summer 2022 programs, including Code@TACC, will be in person.  Out of concern for the health and safety of our community, we will follow the university’s recommendations of community safety. <a href="https://protect.utexas.edu/" target="_blank">Protect Texas Together</a></p>
 		</div>
 		<h3>
 			Program Spotlight</h3>
